# MagnetoHydroDynamic-research

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_INDEX.md  FINAL_REPORT.md  MHD_FINAL_REPORT.md  README.md  RESEARCH_MAP.md  ROADMAP.md  SECURITY.md  STATUS.md  SYSTEM_REPORT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  april_2026_discovery_update.md  benchmark_report.md  cli_reference.md  closure_sandbox.md  diagnostics_and_verification.md  getting_started.md  paper_references.md  roadmap.md  tool_reference.md  topological_adam_branch_audit.md  user_guide.md
docs/derivations/: cylindrical_exact_families.md
docs/discoveries/: annular_variable_resistivity_exact_families.md  non_bilinear_exact_families.md  separable_variable_resistivity_extensions.md  smooth_axis_variable_resistivity_no_go.md  topological_adam_bridge.md  variable_resistivity_obstructions.md
docs/limitations/: current-boundaries.md
docs/overview/: repo-map.md  reproduce-key-checks.md  start-here.md  strongest-results.md
docs/releases/: README.md  v1.0.0.md
docs/research-program/: branch-audit.md  novelty-assessment.md  open-problem-program.md
docs/theorems/: proof_status.md
examples/: compare_closures.py  mhd_novel_experiments.py  residual_solve_demo.py  run_brio_wu.py  run_divergence_cleaning_demo.py  run_orszag_tang.py
mhd_toolkit/: __init__.py  cli.py  config.py
papers/: release_audit.md
tests/: test_cli_smoke.py  test_closures.py  test_diagnostics.py  test_solver_smoke.py  test_symbolic_closures.py  test_topological_adam.py
(+43 files in other folders)
