[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhd-toolkit"
version = "0.1.0"
description = "Practical MHD toolkit for divergence control, closures, diagnostics, and verification."
readme = "docs/README.md"
requires-python = ">=3.10"
authors = [{name = "Steven Reid"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
mhd = "mhd_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["mhd_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
